--- a/paper/SoundTexturesPaper.tex
+++ b/paper/SoundTexturesPaper.tex
@@ -218,6 +218,68 @@ All of our models were written in Python with the help of a number of external l
 
 Our dataset comes from the audio samples used in McDermott and Simoncelli's paper\cite{McDermott2011926} as a basis for their synthetic sounds. The dataset contains 175 sound samples, all 7 seconds long in a .wav format. Of these, 28 were discard due to naming ambiguities which prevented them from being identified with the values in the paper. These samples included many examples of sound textures, such as four different wind samples and multiple different rain samples, as well as some audio files that are obviously not sound textures, such as person speaking English and various rhythmic drumbeats. A full list can be found in Appendix~\ref{sec:dataset}. In the prior work, these samples were used to generate synthetic sounds with similar statistical properties and these synthetic sounds. An experiment was run where these synthetic sounds were given realism ratings by people on a scale of 1 to 7. Since \cite{mcdermott2013summary} showed that many sound textures seemed to be well characterized by these same sets of statistics, we use this realism score as a proxy for the `texturality' of the audio samples.
 
+  \begin{figure*}[hbt]
+    \centering
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqt_applause.png}
+      \caption{Constant Q spectrogram of an applause sound sample.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+    \hfill 
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/mel_applause.png}
+      \caption{Mel spectrogram of an applause sound sample.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+  \end{figure*}
+  
+    \begin{figure*}[hbt]
+    \centering
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqt_bathroom_sink.png}
+      \caption{Constant Q spectrogram of a bathroom sink.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+    \hfill 
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqt_english.png}
+      \caption{Constant Q spectrogram of a person speaking English.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+    \\
+        \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqt_pneumatic_drills.png}
+      \caption{Constant Q spectrogram of pneumatic drills.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+    \hfill 
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqtChurchBells.png}
+      \caption{Constant Q spectrogram of church bells.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+    \\
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqt_insects.png}
+      \caption{Constant Q spectrogram of insects in a swamp.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+    \hfill 
+    \begin{subfigure}[b]{0.45\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{figures/cqt_rythm123.png}
+      \caption{Constant Q spectrogram of a tapped rhythm.}
+      \label{fig:cqt-applause}
+    \end{subfigure}
+  \end{figure*}
+
 We performed a linear regression with $L_1$ regularization with all of our features. Half of the data was randomly selected to be used as training data, one quarter was reserved for a validation step to select our regularization constant, and a quarter was reserved to determine our final r-squared values. \xxx{talk about feature normalization}
 
 \xxx{Describe how we set up our feature extraction. How we set up our learning. What our dataset is. Any other important process things.}
