--- a/paper/SoundTexturesBib.bib
+++ b/paper/SoundTexturesBib.bib
@@ -122,6 +122,12 @@ author = "Josh H. McDermott and Eero P. Simoncelli"
 @Misc{scipy,
   author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
   title =     {{SciPy}: Open source scientific tools for {Python}},
+  url = "http://research.cs.tamu.edu/prism/lectures/sp/l6.pdf",
+}
+
+@Misc{STFT,
+  author =    {Ricardo Gutierrez-Osuna},
+  title =     {Lecture Notes 6 for Introduction to Signal Processing},
   year =      {2001--},
   url = "http://www.scipy.org/",
   note = {[Online; accessed December 10, 2015]}
@@ -146,4 +152,29 @@ month={March},}
   volume={102},
   year={2013},
   publisher={Springer Science \& Business Media}
+}
+
+@article{brown1991calculation,
+  title={Calculation of a constant Q spectral transform},
+  author={Brown, Judith C},
+  journal={The Journal of the Acoustical Society of America},
+  volume={89},
+  number={1},
+  pages={425--434},
+  year={1991},
+  publisher={Acoustical Society of America}
+}
+
+@article{Sahidullah2012543,
+title = "Design, analysis and experimental evaluation of block based transformation in \{MFCC\} computation for speaker recognition ",
+journal = "Speech Communication ",
+volume = "54",
+number = "4",
+pages = "543 - 565",
+year = "2012",
+note = "",
+issn = "0167-6393",
+doi = "http://dx.doi.org/10.1016/j.specom.2011.11.004",
+url = "http://www.sciencedirect.com/science/article/pii/S0167639311001622",
+author = "Md. Sahidullah and Goutam Saha",
 }
