--- a/paper/SoundTexturesPaper.tex
+++ b/paper/SoundTexturesPaper.tex
@@ -174,7 +174,7 @@
 
 \maketitle
 \begin{abstract}
-\xxx{write abstract}
+In this paper we investigate a feature set for the classification of sound textures based on signal compressibility, sparsity, and temporal homogeneity. The feature set was examined and used in a classifier for sound textures. We show that for sound samples with normalized amplitude, these features have very little predictive power with respect to whether a sound is textural. 
 \end{abstract}
 
 \keywords{Machine Learning, Sound Textures, Human Audition}
@@ -314,7 +314,9 @@ We performed a linear regression with $L_1$ regularization with all of our featu
 
 \xxx{Speculate if these could be useful features in audio classification. Speculate about the implication to human audition. Give future directions.}
 
-There are a number of future directions left open by this paper. First, the space of reasonable features has not been fully explored and may lead to yet better classification methods or more insight into the nature of sound textures. These features include: other standard compression algorithms, the entropy of the audio signals, the Kolmogorov complexity of the audio signal, rank estimation of the audio signal, temporal homogeneity of the cross-band correlations, and different sparsity estimation criteria. Another obvious next direction is the integration of these features with existing audio classification methods to attempt to improve performance in more complex settings. Third, there is still much to be understood about the nature of these features and what they can tell us about the audio files. The authors would have been interested to look at the correlation between features, as many of them should be highly related. Understanding when things like sparsity and compressibility differer might hold new insight into signal characteristics. Further, the audio dataset was limited and constrained in a number of ways, and it would be interesting to see how these features vary with over a wider set of sounds. Finally, there still remain important questions about the nature of human perception of sound textures. We showed that intuition about what makes up a sound texture is partially captured by some formal measures, but given none appeared to be necessary or sufficient, it seems that this issue may be more complex than originally stated. However, we also did not fully explore what might reasonably be meant by sparse and temporally homogeneous audio signals, so it is still possible that another definition will better capture what causes this qualitatively different auditory category.
+Out of the large number of features investigated, we've shown that none of them have predictive power when we normalized the amplitudes of our sound samples to fall in the same range. Although we have only ruled out their usefulness in predicting sound textures, it seems unlikely that they will be generally useful in other types of audio classification. Further, this negative result has implications in the understanding of sound textures and human audition. It suggests that one informal conjecture about the nature of sound textures is incorrect. This will hopefully spur a refinement of ideas and definitions surrounding sound textures and provide a useful piece of evidence when considering how to move forward. One might now believe the decision to throw away temporal information about an audio signal to be more nuanced than previously thought and hopefully further work on features such as temporal coincidence, reverberation, natural harmonics, and temporal regularity will now be increasingly motivated.
+
+There are a number of future directions left open by this paper. First, the space of reasonable features has not been fully explored and could still lead to useful features for classification or more insight into the nature of sound textures. These features include: other standard compression algorithms, the entropy of the audio signals, the Kolmogorov complexity of the audio signal, rank estimation of the audio signal, temporal homogeneity of the cross-band correlations, and different sparsity estimation criteria. Although these features are all related, they are certainly not the same and the authors know of no way to rule them out without direct investigation. Another possible direction is the integration of these features with existing audio classification methods to attempt to improve performance in more complex settings. We do not believe this is likely to be a fruitful search; however, the domain of attempting to classify the texturalality of sound is very narrow compared to the entirety of computer sound classification. Third, there is still much to be understood about the nature of these features and what they do tell us about an audio file. The authors would have been interested to look at the correlation between features and examples where these notions do and do not line up. Understanding when things like sparsity and compressibility differer might hold new insight into signal characteristics. Finally, there still remain important questions about the nature of human perception of sound textures. Now that we've ruled out a number of characterizing features, the question of what makes something a sound texture is even more tantalizing. 
 
 \section*{Acknowledgments}
 
